# src/routes.ts
@@ -48,6 +48,7 @@ const models: TsoaRoute.Models = {
             "type": {"dataType":"string"},
             "name": {"dataType":"string","required":true},
             "icon": {"dataType":"string"},
+            "iconColor": {"dataType":"string"},
             "description": {"dataType":"string"},
             "tags": {"dataType":"array","array":{"dataType":"string"}},
             "categoryName": {"dataType":"string"},
@@ -64,6 +65,7 @@ const models: TsoaRoute.Models = {
         "properties": {
             "name": {"dataType":"string","required":true},
             "icon": {"dataType":"string","required":true},
+            "iconColor": {"dataType":"string"},
             "description": {"dataType":"string","required":true},
             "tags": {"dataType":"array","array":{"dataType":"string"},"required":true},
             "categoryName": {"dataType":"string","required":true},
